# kryptostream-apptrust

./: .gitignore  H11_VULNERABILITY_FIX.md  SECURITY_FIXES_SUMMARY.md  config-env.sh  e2e-test-compose-local.yml  portforward.sh  run-e2e.sh  test-cypress-mock.sh  test-cypress-only.sh  test-e2e-local.sh
.github/workflows/: ai-translate-ci.yml  btcwallet-ci.yml  btcwallet-ui-ci.yml  create-application-version.yml  create-jira-evidence.yml  create-release-bundle.yml  e2e-application.yml  end2end-tests.yml  jfrog-integration-test.yml  promote-application-version-preprod.yml  promote-application-version.yml  promote-to-qa.yml  quoteofday-ci.yml  quoteofday-release-bundle.yml  quotopia-ui-ci.yml  release-application-version.yml  release-to-prod.yml  test-evd.yml  translate-ci.yml
.jfrog/: config.yml
.jfrog/projects/: maven.yaml
argocd/manifests/: btcwallet-default-service-acount-grant-cluster-role.yaml  deployment-ai-translate.yaml  deployment-ai-translate.yaml.cencelled  deployment-btcwallet-ui.yaml  deployment-btcwallet.yaml  deployment-quoteofday.yaml  deployment-quotopia-ui.yaml  job-post-sync-evidence.yaml  service-btcwallet-ui.yaml  (+2 more)
btcwallet/: Dockerfile  README.md  pom.xml
btcwallet-ui/: index.html  script.js  styles.css
docs/: jfrog-integration-testing.md  self-hosted-runner-setup.md
e2e-tests/: CYPRESS_MARKDOWN_REPORT.md  Dockerfile.e2e  E2E_CI_INTEGRATION.md  E2E_TEST_README.md  README.md  STRUCTURE.md  convert-cypress-report.sh  convert-cypress-to-markdown.js  cypress-report.md  cypress.config.debug.js  cypress.config.docker.js  cypress.config.js  cypress.config.local.js  docker-compose.local.yml  docker-compose.yml.template  package-lock.json  package.json  requirements.txt  run-cypress-docker.sh  run-cypress.sh  run-e2e-local.sh  run-e2e-tests.sh  test-report.md  validate-setup.sh
jfrog-integration-test-report/: integration-test-summary.md
jira/: README.md
kargo/: release_version
local-run/: Dockerfile.e2e  E2E_TEST_README.md  STRUCTURE.md  docker-compose.local.yml  validate-setup.sh
quoteofday/: Dockerfile  Dockerfile.simple  README.md  health-check.sh  pom.xml  test-evidence.json  test-evidence.md
quotopia-ui/: index.html  script.js
scripts/: check-environment.sh  fix-existing-runner.sh  fix-runner-ssl-system.sh  fix-ssl-certificates.sh  generate_markdown.py  setup-runner-env.sh  test-jfrog-integration.sh
snow/: approval.json  approval.md
translate/: Dockerfile  Dockerfile.arm64  OPTIMIZATION_SUMMARY.md  README.md  app.py  build-optimized.sh  pyproject.toml  requirements-optimized-arm64.txt  requirements-optimized.txt  requirements.txt  simple_app.py  start.sh  test-artifactory.sh  test_service.py  translation_service.py
translate/translation_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+35 files in other folders)
