[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "translation-service"
dynamic = ["version"]
description = "A REST API service for English to French and Hebrew translation using Hugging Face models"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "JFrog Evidence Demo", email = "demo@jfrog.com"}
]
maintainers = [
    {name = "JFrog Evidence Demo", email = "demo@jfrog.com"}
]
keywords = ["translation", "nlp", "huggingface", "fastapi", "rest-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "transformers>=4.30.0",
    "torch>=2.0.1",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
translation-service = "simple_app:main"

[project.urls]
Homepage = "https://github.com/jfrog/evidence-demo"
Repository = "https://github.com/jfrog/evidence-demo"
Documentation = "https://github.com/jfrog/evidence-demo#readme"
Issues = "https://github.com/jfrog/evidence-demo/issues"

[tool.setuptools_scm]
write_to = "simple_app/_version.py"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true
